--- a/src/styles/view.css
+++ b/src/styles/view.css
@@ -26,6 +26,10 @@
 	gap: 5px;
 }
 
+.sidebar-nav-spacer {
+	flex: 1;
+}
+
 .sidebar-nav-item {
 	display: flex;
 	align-items: center;
@@ -238,6 +242,7 @@
 	display: flex;
 	flex-direction: column;
 	padding: 8px 0;
+	height: 100%;
 }
 
 /* Project tree */
