--- a/src/styles/gantt/gantt.css
+++ b/src/styles/gantt/gantt.css
@@ -367,8 +367,8 @@
 
 .gantt-task-label-markdown {
 	color: var(--text-on-accent);
-	font-size: var(--font-ui-small);
-	line-height: 1.2;
+	font-size: var(--font-ui-smaller);
+	line-height: 1.3;
 	padding: 0 2px;
 	white-space: nowrap;
 	overflow: hidden;
@@ -378,8 +378,28 @@
 	align-items: center;
 	height: 100%;
 }
+
 .gantt-task-label-markdown p {
 	margin: 0 !important;
+}
+
+.gantt-milestone-label-container p {
+	margin-block-start: 0;
+	margin-block-end: 0;
+	margin-inline-start: 0;
+	margin-inline-end: 0;
+
+	color: var(--text-normal);
+	font-size: var(--font-ui-smaller);
+	line-height: 1.3;
+	padding: 0 2px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+
+	display: flex;
+	align-items: center;
+	height: 100%;
 }
 
 .gantt-task-item.status-done .gantt-task-label-markdown {
@@ -434,4 +454,54 @@
 
 .gantt-offscreen-indicator-right {
 	right: 5px;
+}
+
+.gantt-indicator-container {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: var(--size-4-3);
+	z-index: 10;
+	pointer-events: none;
+	overflow: hidden;
+}
+
+.gantt-indicator-container-left {
+	left: 0;
+}
+
+.gantt-indicator-container-right {
+	right: 0;
+}
+
+.gantt-single-indicator {
+	position: absolute;
+	left: var(--size-2-1);
+	width: var(--size-4-2);
+	height: var(--size-4-2);
+	border-radius: 50%;
+	background-color: var(--text-faint);
+	pointer-events: auto;
+	cursor: default;
+}
+
+.gantt-single-indicator:hover {
+	background-color: var(--text-accent);
+}
+
+.gantt-chart-container .gantt-indicator-container {
+	top: calc(var(--header-height, 40px) + var(--filter-height, 0px));
+	bottom: 15px;
+}
+
+.gantt-chart-container .gantt-indicator-container-right {
+	right: 15px;
+}
+
+.gantt-task-label p {
+	margin: 0;
+	line-height: var(--gantt-bar-height);
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
