--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -6,8 +6,9 @@
 	gap: var(--size-4-2);
 	padding: var(--size-4-2) var(--size-4-3);
 	background-color: var(--background-primary);
-	border-bottom: 1px solid var(--background-modifier-border);
 	min-height: 48px;
+
+	flex: 1;
 }
 
 /* Filter Pills Container */
