fix: number list cannot showed correctly

--- a/src/styles/task-status.css
+++ b/src/styles/task-status.css
@@ -155,3 +155,11 @@
 	margin-right: 4px;
 	vertical-align: middle;
 }
+
+ol > .task-list-item .task-fake-bullet {
+	display: none;
+}
+
+ol > .task-list-item .task-state-container {
+	margin-inline-start: 0;
+}
