--- a/src/styles/task-details.css
+++ b/src/styles/task-details.css
@@ -16,6 +16,7 @@
 	min-width: 250px;
 	max-width: 400px;
 	background-color: var(--background-secondary);
+	order: 1;
 }
 
 /* Details panel visibility */
