feat: support sort define settings

--- a/src/styles/setting.css
+++ b/src/styles/setting.css
@@ -1017,3 +1017,14 @@
 }
 
 /* END: Reward Settings Styles */
+
+/* START: Task Handler Settings Styles */
+.setting-item.sort-criterion-row .setting-item-info {
+	display: none;
+}
+
+.setting-item.sort-criterion-row select.dropdown {
+	flex: 1;
+}
+
+/* END: Task Handler Settings Styles */
