feat: support date filter in view config

--- a/src/styles/view-config.css
+++ b/src/styles/view-config.css
@@ -8,7 +8,9 @@
 	margin-bottom: 15px;
 }
 
-.task-genius-view-config-modal .setting-item-info {
+.task-genius-view-config-modal
+	.setting-item:not(.setting-item-heading)
+	.setting-item-info {
 	/* Ensure labels are aligned well */
 	width: 120px;
 }
