--- a/src/styles/task-gutter.css
+++ b/src/styles/task-gutter.css
@@ -1,6 +1,10 @@
-.cm-gutters.task-gutter {
+.markdown-source-view.mod-cm6 .cm-gutters.task-gutter {
 	margin-inline-end: 0 !important;
 	margin-inline-start: var(--file-folding-offset);
+}
+
+.is-mobile .markdown-source-view.mod-cm6 .cm-gutters.task-gutter {
+	margin-inline-start: 0 !important;
 }
 
 .task-details-popover.tg-menu {
@@ -20,7 +24,7 @@
 .task-gutter-marker {
 	cursor: pointer;
 	font-size: var(--font-smaller);
-	opacity: 0.2;
+	opacity: 0.1;
 	transition: opacity 0.2s ease;
 }
 
@@ -122,7 +126,8 @@
 	display: flex; /* Show active pane */
 }
 
-.task-details-popover .details-status-selector {
+.task-details-popover .details-status-selector,
+.task-status-editor .details-status-selector {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -131,7 +136,8 @@
 	margin-top: var(--size-4-2);
 }
 
-.task-details-popover .quick-capture-status-selector {
+.task-details-popover .quick-capture-status-selector,
+.task-status-editor .quick-capture-status-selector {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -139,6 +145,25 @@
 	gap: var(--size-4-3);
 }
 
-.task-details-popover .quick-capture-status-selector-label {
+.task-details-popover .quick-capture-status-selector-label,
+.task-status-editor .quick-capture-status-selector-label {
 	display: none;
+}
+
+.modal-content.task-metadata-editor {
+	display: flex;
+	flex-direction: column;
+	gap: var(--size-4-2);
+}
+
+.metadata-full-container {
+	display: flex;
+	flex-direction: column;
+	gap: var(--size-4-2);
+}
+
+.metadata-full-container .dates-container {
+	display: flex;
+	flex-direction: column;
+	gap: var(--size-4-2);
 }
